[package]
name = "libcore-drone"
version = "0.12.0"
authors = ["Valentine Valyaeff <valentine.valyaeff@gmail.com>"]
edition = "2018"
repository = "https://github.com/drone-os/libcore-drone"
homepage = "https://www.drone-os.com/"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = """
A libcore wrapper to enable async/await for Drone apps.
"""

[dependencies.drone-core]
version = "0.12.0"
path = "../../drone-os/drone-core"
